--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,38 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!--
+  Copyright 2013 The Android Open Source Project
+
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+  -->
+
 <resources>
-
-    <string name="app_name">CKCK</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-
+    <string name="app_name">시켜시켜</string>
+    <string name="category">카테고리</string>
+    
+    <string-array name="category_arr">
+        <item>전체</item>
+        <item>치킨</item>
+        <item>중식</item>
+        <item>피자</item>
+        <item>족발/보쌈</item>
+        <item>한식/분식</item>
+        <item>야식</item>
+        <item>일식/돈까스</item>
+          <item>도시락/죽</item>
+        <item>기타</item>
+    </string-array>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+    <string name="action_websearch">Web search</string>
+    <string name="app_not_available">Sorry, there\'s no web browser available</string>
+    <string name="menu">메뉴</string>
 </resources>
