--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,8 +42,8 @@
      <string name="check_email"> 이메일 수신 동의</string>
       <string name="check_agree1"> 이용약관 및 청소년 보호정책에 동의 합니다.</string>
        <string name="check_agree2"> 개인정보 수집 및 이용에 동의 합니다.</string>
-        <string name="tv1"> 서비스 제공에 필요한 최소한의 정보 이외의 개인정보 수집에 대하여는 동의하지 않을 수 있으며, 이 경우 일부 서비스의 제공이 제한 될 수 있습니다.</string>
-         <string name="tv2"> 만 14세 미만은 가입하실 수 없습니다.</string>
+        <string name="adduser_tv1"> 서비스 제공에 필요한 최소한의 정보 이외의 개인정보 수집에 대하여는 동의하지 않을 수 있으며, 이 경우 일부 서비스의 제공이 제한 될 수 있습니다.</string>
+         <string name="adduser_tv2"> 만 14세 미만은 가입하실 수 없습니다.</string>
          <string name="add_user">회원가입</string>
           <string name="order">주문하기</string>
           <string name="menu_insert">메뉴추가</string>
