--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,6 +30,13 @@
           <item>도시락/죽</item>
         <item>기타</item>
     </string-array>
+    <string-array name="user_mobile">
+        <item>010</item>
+        <item>011</item>
+        <item>016</item>
+       <item>019</item>
+       
+    </string-array>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="action_cart">장바구니</string>
