--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="action_cart">장바구니</string>
+    <string name="action_search">찾기</string>
     <string name="action_user">회원가입</string>
     <string name="app_not_available">Sorry, there\'s no web browser available</string>
     <string name="menu">메뉴</string>
@@ -54,6 +55,8 @@
          <string name="add_user">회원가입</string>
           <string name="order">주문하기</string>
           <string name="menu_insert">메뉴추가</string>
-
+          <string name="action_selectorder">주문표</string>
+	
+          
             
 </resources>
