--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -64,5 +64,6 @@
     <string name="adduser_tv2"> 만 14세 미만은 가입하실 수 없습니다.</string>
     <string name="menu_insert">메뉴추가</string>
     <string name="category">카테고리</string>
+    <string name="title_send_order">주문하기</string>
 
 </resources>
